recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
  if(l.head==Nil){
    return
  }
  else{
    return l.head::butLast(l.tail)
  }
}